Convidar Usuarios, Relacionamento com ForeignKey

--- a/connectedin/perfis/templates/index.html
+++ b/connectedin/perfis/templates/index.html
@@ -8,5 +8,24 @@
     <h1> Bem vindo Teste de Django<h1>
     <h2> Python 2.7.15rc1<h2>
     <h2> Django 1.11.20 <h2>
+
+    <ul>
+    {% comment %} Tag de Template {% endcomment %}
+    {% if perfis%}
+        {% for perfil in perfis %}
+            <li>ID: {{perfil.id}}</li>
+            <li>
+            <a href="{% url 'exibir' perfil.id %}">
+            Nome: {{perfil.name|upper}}/ Email: {{perfil.email}}
+            <p>Telefone: {{ perfil.fone|default:"Telefone não informado" }} </p>
+            </li>
+            
+            {% endfor %}
+    {% else %}
+        <p>Nenhum perfil Localizado</p>
+
+    {% endif %}
+   
+    </ul>
 </body>
 </html>
