--- a/connectedin/perfis/templates/perfil.html
+++ b/connectedin/perfis/templates/perfil.html
@@ -8,8 +8,6 @@
 <body>
     <h1> Detalhes Perfil<h1> 
     <h3>Nome: {{perfil.name}}<h3>
-    <h3>Email: {{perfil.email}} <h3>
-    <h3>Telefone: {{perfil.fone}}<h3>
-    <h3>Empresa: {{perfil.company}}<h3>
+    <a href="{% url 'convidar' perfil.id %}">Convidar</a>
 </body>
 </html>
