--- a/connectedin/perfis/templates/base.html
+++ b/connectedin/perfis/templates/base.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="header">
             <ul class="nav nav-pills pull-right">
-                <li><a href="{% url 'index'%}">Nome</a></li>
+                <li><a href="{% url 'index'%}">{{perfil_logado.name}}</a></li>
                 <li><a href="/logout/">Logout</a></li>
             </ul>
             <h3 class="text-muted"> ConnectedIn</h3>
