--- a/connectedin/perfis/templates/index.html
+++ b/connectedin/perfis/templates/index.html
@@ -21,6 +21,30 @@
 
         {% endif %}
     </div>
+    <div class="panel panel-default">
+    {% comment %} quando usamos a clausula with não pode haver espaço {% endcomment %}
+         {% with  total_de_convites=perfil_logado.convites_recebidos.count %}
+            {% if total_de_convites %}
+                <div class="panel-heading">
+                    <strong> Você tem {{total_de_convites}} 
+                    convite{{total_de_convites |pluralize}} 
+                    aguardado aprovação</strong>
+                </div>
+                <ul class="list-group">
+                    {% for convite in perfil_logado.convites_recebidos.all%}
+                    <li class="list-group-item">
+                        {{convite.solicitante.name}}
+                        <a href="#" class="pull-right">Aceitar</a>
+                    </li>
+                    {% endfor%}
+                </ul>
+            {% else %}
+            <div class="panel-body">
+                <p> Nenhum convite recebido</p>
+            </div>
+            {% endif%}
+        {% endwith %}
+    </div>
 </div>
 {% endblock %}
    
