--- a/connectedin/perfis/templates/index.html
+++ b/connectedin/perfis/templates/index.html
@@ -34,13 +34,39 @@
                     {% for convite in perfil_logado.convites_recebidos.all%}
                     <li class="list-group-item">
                         {{convite.solicitante.name}}
-                        <a href="#" class="pull-right">Aceitar</a>
+                        <a href="{% url 'aceitar' convite.id%}" class="pull-right">Aceitar</a>
                     </li>
                     {% endfor%}
                 </ul>
             {% else %}
             <div class="panel-body">
                 <p> Nenhum convite recebido</p>
+            </div>
+            {% endif%}
+        {% endwith %}
+    </div>
+
+    <div class="panel panel-default">
+    {% comment %} quando usamos a clausula with não pode haver espaço {% endcomment %}
+         {% with  total_de_contatos=perfil_logado.contatos.count %}
+            {% if total_de_contatos %}
+                <div class="panel-heading">
+                    <strong> Você tem {{total_de_contatos}} 
+                    contato{{total_de_contatos |pluralize}} 
+                    </strong>
+                </div>
+                <ul class="list-group">
+                    {% for contato in perfil_logado.contatos.all%}
+                    <li class="list-group-item">
+                    <a href="{% url 'exibir' contato.id %}">
+                        {{contato.solicitante.name}}</a>
+                      
+                    </li>
+                    {% endfor%}
+                </ul>
+            {% else %}
+            <div class="panel-body">
+                <p> Você não possui contatos no momento</p>
             </div>
             {% endif%}
         {% endwith %}
