--- a/connectedin/perfis/templates/perfil.html
+++ b/connectedin/perfis/templates/perfil.html
@@ -9,7 +9,11 @@
             <abbr title="Telefone">Fone: </abbr> {{perfil.fone}}<br>
             <a href="mailto:{{perfil.email}}">{{perfil.email}}</a><br>
         </address>
-        <a href="{% url 'convidar' perfil.id%}">Convidar</a>
+        {% if ja_eh_contato%}
+            <div class="well well-sm"> Vocês estão conectados </div>
+        {% else %}
+            <a href="{% url 'convidar' perfil.id%}">Convidar</a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
