Nova aplicacao dentro do projeto: Usuarios, config das urls, view e html basicos

--- a/connectedin/perfis/templates/base.html
+++ b/connectedin/perfis/templates/base.html
@@ -5,7 +5,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width">
- <title>Document</title>
+ <title>Connectedin</title>
     <link rel="stylesheet" href="{% static 'styles/bootstrap.css'%}">
     <link rel="stylesheet" href="{% static 'styles/main.css'%}">
     {% comment %} O Django resolve facilmente este problema atraves da pasta static. 
