--- a/connectedin/usuarios/templates/registrar.html
+++ b/connectedin/usuarios/templates/registrar.html
@@ -1,25 +1,36 @@
-{% extends 'base_usuario.html' %}
+{% extends "base_usuario.html" %}
 
-{% block body%}
-<form class="form-signin" role="form" action="{% url 'registrar' %}" method="post">
+{% block body %}
+
+  <form class="form-signin" role="form" action="{% url 'registrar' %}" method="post">
     {% csrf_token %}
-    <h2 class="form-signin-heading"> Crie seu usuario <h2>  
-    <hr>
-        <input id="id_email" name ="email" type="text" class="form-control" placeholder="Email *">
 
-        <input id="id_nome" name ="name" type="text" class="form-control" placeholder="Nome *">
+    <h2 class="form-signin-heading">Crie seu usuário</h2>
 
-        <input id="id_password" name ="password" type="text" class="form-control" placeholder="Senha *">
+    <input type="text" id="id_email" name="email" class="form-control" placeholder="Email *" value="{{form.email.value}}" required autofocus >
 
-        <input id="id_email" name ="email" type="password" class="form-control" placeholder="Email *">
-        
-        <input id="id_fone" name ="fone" type="text" class="form-control" placeholder="Telefone ">
+    <input type="password" id="id_senha" name="senha" class="form-control"  placeholder="Senha *" required>
 
-        <input id="id_company" name ="company" type="text" class="form-control" placeholder="Empresa ">
+    <hr />
 
-    </hr>
+    <input type="text" id="id_nome" name="nome" class="form-control" placeholder="Nome *" value="{{form.nome.value}}" required >
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Registrar Usuario </button>
+    <input type="text" id="id_telefone" name="telefone" class="form-control" placeholder="Telefone" value="{{form.telefone.value}}">
 
-</form>
-{% endblock%}
+    <input type="text" id="id_nome_empresa" name="nome_empresa" class="form-control" placeholder="Empresa" value="{{form.nome_empresa.value}}">
+
+    <hr />
+
+    <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Registrar</button>
+
+    <hr/>
+
+     {% if form.errors %}
+      <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+        {{form.non_field_errors}}
+      </div>
+    {% endif %}
+  </form>
+
+{% endblock %}
