Login do Django

--- a/connectedin/perfis/templates/base.html
+++ b/connectedin/perfis/templates/base.html
@@ -12,8 +12,10 @@
 		<div class="container">
 			<div class="header">
 				<ul class="nav nav-pills pull-right">
-					<li class=""><a href="{% url 'index' %}">{{perfil_logado.nome}}</a></li>
-					<li class=""><a href="/logout/">Logout</a></li>
+					 <ul class="nav nav-pills pull-right">
+						<li><a href="{% url 'index' %}">{{user.perfil.nome}}</a></li>
+						<li><a href="{% url 'logout' %}">Logout</a></li>
+					</ul>
 				</ul>
 				<h3 class="text-muted">ConnectedIn</h3>
 			</div>
